docs: expand optimizer and tuning guides